--- a/web/templates/base/header.html
+++ b/web/templates/base/header.html
@@ -7,7 +7,7 @@
 						<li><a href="/"><img style="width: 130px;" src="{% static 'images/ssglogo.png' %}"></a></li>
 						<li><a href="/"><span>HOME</span></a></li>
 						<li><a href="/anounce/anounce.html"><span>Anounce</span></a></li>
-						<li><a href="#"><span>Contact</span></a></li>
+						<li><a href="/contact.html"><span>Contact</span></a></li>
 					</ul>
 				</nav>	
 			</div>
